@@ -40,6 +40,8 @@ systemd System and Service Manager
     - remove libsystemd-logs library;
  * remove libsystemd-logs library;
  * remove bootchart support;
+ * unit:
+    - don't check running state journald on unit notify;
  
    systemd (214.2)
 ~~~~~~~
